pulldown-cmark-mdcat/tests/snapshots/render/dumb@commonmark-spec__588-images.md.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 157
expression: "replace_system_specific_urls(render_to_string(markdown_file, &dumb_settings))"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/588-images.md
---
foo bar[1]

[1]: /url title
